# cuda-ashmaize

./: ANALYSIS_INDEX.md  ARCHITECTURE_DIAGRAMS.md  Cargo.toml  QUICK_REFERENCE.md  README.md  TECHNICAL_ANALYSIS.md  WASM_OPTIMIZATION.md
docs/cuda-analysis/: 00_INDEX.md  01_VM_ARCHITECTURE.md  02_ROM_GENERATION.md  03_CRYPTOGRAPHIC_PRIMITIVES.md  04_INSTRUCTION_SET.md  05_CUDA_ARCHITECTURE.md  SUMMARY.md
examples/: test_rom_addressing.rs
gpu-ashmaize/: Cargo.toml  Makefile  README.md  build.rs
gpu-ashmaize/cuda/: argon2.cu  argon2.cuh  benchmark.cu  blake2b.cu  blake2b.cuh  common.cuh  instructions.cu  instructions.cuh  kernel.cu  kernel.cuh  vm.cu  vm.cuh
gpu-ashmaize/examples/: cpu_vs_gpu_benchmark.rs  debug_cpu_vm.rs  drop_in_replacement.rs  gpu_determinism.rs  minimal_test.rs  systematic_debug.rs  test_large_roms.rs  test_rom_upload.rs  test_simple_case.rs  test_tiny_rom.rs  test_vector.rs  test_wrapper.rs  trace_vm_state.rs  verify_compatibility.rs
gpu-ashmaize/src/: error.rs  ffi.rs  lib.rs
gpu-ashmaize/tests/: argon2_test.cu  argon2_vectors.txt  argon2_verify.py  blake2b_test.cu  blake2b_verify.cu  low_level_primitives.rs
src/: lib.rs  rom.rs
